# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-lms/src/mcp_lms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py
mcp/mcp-obs/src/mcp_obs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
